Render result different between animated and still renders #46729

Closed
opened 2015-11-09 03:16:20 +01:00 by gandalf3 · 10 comments
Member

Archlinux

Broken: 2.76b

Steps to reproduce:

  1. Open animated_renderlayer_bug.blend
  2. Render a still frame on frame 61. Works as expected
  3. Render the animation (I've set the start frame to 60 to avoid wasting time rendering all the frames before that)
  4. Frame 61 is completely black in the animation render

Additional information:

I have animated the renderlayer visibility as an optimization tactic (some renderlayers are only required for short periods of time). I also animated a switch node in the compositor to avoid breaking the compositing setup.
If I enable the renderlayers a frame before enabling the switch node, everything is fine. However I wouldn't have expected this to be needed, since enabling them both on the same frame works fine in a normal F12 still render.

Archlinux Broken: 2.76b Steps to reproduce: --------------------------- 1. Open [animated_renderlayer_bug.blend](https://archive.blender.org/developer/F253818/animated_renderlayer_bug.blend) 2. Render a still frame on frame 61. Works as expected 3. Render the animation (I've set the start frame to 60 to avoid wasting time rendering all the frames before that) 4. Frame 61 is completely black in the animation render Additional information: -------------------- I have animated the renderlayer visibility as an optimization tactic (some renderlayers are only required for short periods of time). I also animated a switch node in the compositor to avoid breaking the compositing setup. If I enable the renderlayers a frame before enabling the switch node, everything is fine. However I wouldn't have expected this to be needed, since enabling them both on the same frame works fine in a normal F12 still render.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3

Added subscriber: @Sergey

Added subscriber: @Sergey
Campbell Barton was assigned by Sergey Sharybin 2015-11-09 15:03:28 +01:00
Campbell Barton was unassigned by Sergey Sharybin 2015-11-09 15:07:08 +01:00
Sergey Sharybin self-assigned this 2015-11-09 15:07:08 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Woops, wrong report.

This one goes to me i guess, will check in a bit.

Woops, wrong report. This one goes to me i guess, will check in a bit.
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Developer note:

Here's a proposed patch which also explains what happens:

P286: Fix #46729

diff --git a/source/blender/render/intern/source/pipeline.c b/source/blender/render/intern/source/pipeline.c
index e099c72..d654238 100644
--- a/source/blender/render/intern/source/pipeline.c
+++ b/source/blender/render/intern/source/pipeline.c
@@ -35,6 +35,7 @@
 #include <stdlib.h>
 #include <stddef.h>
 
+#include "DNA_anim_types.h"
 #include "DNA_image_types.h"
 #include "DNA_node_types.h"
 #include "DNA_object_types.h"
@@ -3608,7 +3609,24 @@ void RE_BlenderAnim(Render *re, Main *bmain, Scene *scene, Object *camera_overri
 	else {
 		for (nfra = sfra, scene->r.cfra = sfra; scene->r.cfra <= efra; scene->r.cfra++) {
 			char name[FILE_MAX];
-			
+
+			/* Here is a feedback loop exists -- render initialization requires updated
+			 * render layers settings which could be animated, but scene evaluation for
+			 * the frame happens later because it depends on what layers are visible to
+			 * render engine.
+			 *
+			 * The idea here is to only evaluate animation data associated with the scene,
+			 * which will make sure render layer settings are up-to-date, initialize the
+			 * render database itself and then perform full scene update with only needed
+			 * layers.
+			 *                                                              - sergey -
+			 */
+			{
+				float ctime = BKE_scene_frame_get(scene);
+				AnimData *adt = BKE_animdata_from_id(&scene->id);
+				BKE_animsys_evaluate_animdata(scene, &scene->id, adt, ctime, ADT_RECALC_ALL);
+			}
+
 			/* only border now, todo: camera lens. (ton) */
 			render_initialize_from_main(re, &rd, bmain, scene, NULL, camera_override, lay_override, 1, 0);
 

@ideasman42, any strong opinion here?

Developer note: Here's a proposed patch which also explains what happens: [P286: Fix #46729](https://archive.blender.org/developer/P286.txt) ``` diff --git a/source/blender/render/intern/source/pipeline.c b/source/blender/render/intern/source/pipeline.c index e099c72..d654238 100644 --- a/source/blender/render/intern/source/pipeline.c +++ b/source/blender/render/intern/source/pipeline.c @@ -35,6 +35,7 @@ #include <stdlib.h> #include <stddef.h> +#include "DNA_anim_types.h" #include "DNA_image_types.h" #include "DNA_node_types.h" #include "DNA_object_types.h" @@ -3608,7 +3609,24 @@ void RE_BlenderAnim(Render *re, Main *bmain, Scene *scene, Object *camera_overri else { for (nfra = sfra, scene->r.cfra = sfra; scene->r.cfra <= efra; scene->r.cfra++) { char name[FILE_MAX]; - + + /* Here is a feedback loop exists -- render initialization requires updated + * render layers settings which could be animated, but scene evaluation for + * the frame happens later because it depends on what layers are visible to + * render engine. + * + * The idea here is to only evaluate animation data associated with the scene, + * which will make sure render layer settings are up-to-date, initialize the + * render database itself and then perform full scene update with only needed + * layers. + * - sergey - + */ + { + float ctime = BKE_scene_frame_get(scene); + AnimData *adt = BKE_animdata_from_id(&scene->id); + BKE_animsys_evaluate_animdata(scene, &scene->id, adt, ctime, ADT_RECALC_ALL); + } + /* only border now, todo: camera lens. (ton) */ render_initialize_from_main(re, &rd, bmain, scene, NULL, camera_override, lay_override, 1, 0); ``` @ideasman42, any strong opinion here?

@Sergey, LGTM (or, I don't see a better way to handle).

Note that this block should really be applied to the get_next_frame check above, however this is for the frame-server, which I think we could remove.

@Sergey, LGTM (or, I don't see a better way to handle). Note that this block should _really_ be applied to the `get_next_frame` check above, however this is for the frame-server, which I think we could remove.

This issue was referenced by 8ef68bf989

This issue was referenced by 8ef68bf989cee6084be00ec460bf555c4eecbcd7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46729
No description provided.